# ur5_husky_api

./: .gitignore  readme.md
scripts/: example.sh  fix_permissions.sh  fold_robot.sh  get_cat_drawer.sh  get_cat_floor.sh  get_cat_table.sh  get_cube_chair.sh  get_cube_drawer.sh  get_cube_floor.sh  get_cube_table.sh  gripper_to_default.sh  manipulator_joystick_commands.py  open_drawer.sh  release_cube_box.sh  release_cube_chair.sh  release_cube_drawer.sh  release_cube_floor.sh  release_cube_table.sh
src/camera_depth_export/: CMakeLists.txt  README.md  package.xml
src/camera_depth_export/scripts/: camera_depth_gripper.py
src/camera_pub/: CMakeLists.txt  package.xml
src/camera_pub/launch/: detect_obj_in_gripper.launch
src/camera_pub/scripts/: camera.py  camera_depth_gripper.py
src/gripper_move/scripts/: gripper.py
src/pkgs_for_datasets/arm_msgs/: CMakeLists.txt
src/pkgs_for_datasets/arm_msgs/msg/: GripperState.msg
src/ur5_info/launch/: ur5_info.launch
src/ur5_info/scripts/: ur5_move.py
src/ur5_run/: CMakeLists.txt  package.xml
src/ur5_run/launch/: ur5_run.launch
